--- a/notebooks/all_news_analysis.ipynb
+++ b/notebooks/all_news_analysis.ipynb
@@ -15,28 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "publico_path = '../extra/notícias/news_sample_1to1000_updated.csv'\n",
-    "observador_path = '../extra/notícias/noticias_observador_fev_a_junho.csv'"
+    "observador_path = '../extra/notícias/noticias_observador_fev_a_julho.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_publico = pd.read_csv(publico_path, index_col='Unnamed: 0')\n",
-    "df_publico.index.set_names('index', inplace=True)\n",
-    "df_observador = pd.read_csv(observador_path, index_col='index').drop(['Unnamed: 0', 'Unnamed: 0.1'], axis=1)"
+    "df_observador = pd.read_csv(observador_path, index_col='Unnamed: 0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -81,30 +80,6 @@
        "      <th>extra4</th>\n",
        "      <th>partners</th>\n",
        "      <th>props</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>index</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -234,58 +209,52 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                  titulo  \\\n",
-       "index                                                      \n",
-       "0      Linha de mil milhões para micro e pequenas emp...   \n",
-       "1      Covid-19: Twitter retira vídeo e mensagens de ...   \n",
-       "2      Tecnologia portuguesa elimina o novo coronavír...   \n",
-       "3      “Não somos super-homens, somos humanos”: os re...   \n",
-       "4      Dez milhões de euros para as instituições part...   \n",
+       "                                              titulo  \\\n",
+       "0  Linha de mil milhões para micro e pequenas emp...   \n",
+       "1  Covid-19: Twitter retira vídeo e mensagens de ...   \n",
+       "2  Tecnologia portuguesa elimina o novo coronavír...   \n",
+       "3  “Não somos super-homens, somos humanos”: os re...   \n",
+       "4  Dez milhões de euros para as instituições part...   \n",
        "\n",
-       "                                               descricao  titulo_Mobile  \\\n",
-       "index                                                                     \n",
-       "0      Ministério da Economia diz que a formalização ...            NaN   \n",
-       "1      Segundo o jornal <i>The Washington Post</i>, o...            NaN   \n",
-       "2      A tecnologia pioneira AT MicroProtect, desenvo...            NaN   \n",
-       "3      Há de tudo: a algumas pessoas a covid-19 não p...            NaN   \n",
-       "4      Da aquisição de máscaras, luvas e viseiras à c...            NaN   \n",
+       "                                           descricao  titulo_Mobile subtitulo  \\\n",
+       "0  Ministério da Economia diz que a formalização ...            NaN       NaN   \n",
+       "1  Segundo o jornal <i>The Washington Post</i>, o...            NaN       NaN   \n",
+       "2  A tecnologia pioneira AT MicroProtect, desenvo...            NaN       NaN   \n",
+       "3  Há de tudo: a algumas pessoas a covid-19 não p...            NaN       NaN   \n",
+       "4  Da aquisição de máscaras, luvas e viseiras à c...            NaN       NaN   \n",
        "\n",
-       "      subtitulo rubricTag      rubrica     tipo  palavraChave  \\\n",
-       "index                                                           \n",
-       "0           NaN       NaN     Covid-19  NOTICIA           NaN   \n",
-       "1           NaN       NaN  Coronavírus  NOTICIA           NaN   \n",
-       "2           NaN       NaN  Coronavírus  NOTICIA           NaN   \n",
-       "3           NaN       NaN  Coronavírus  NOTICIA           NaN   \n",
-       "4           NaN       NaN     Covid-19  NOTICIA           NaN   \n",
+       "  rubricTag      rubrica     tipo  palavraChave         tipoLayout  isOpinion  \\\n",
+       "0       NaN     Covid-19  NOTICIA           NaN  MULTIMEDIA_NORMAL      False   \n",
+       "1       NaN  Coronavírus  NOTICIA           NaN  MULTIMEDIA_NORMAL      False   \n",
+       "2       NaN  Coronavírus  NOTICIA           NaN  MULTIMEDIA_NORMAL      False   \n",
+       "3       NaN  Coronavírus  NOTICIA           NaN    LONGFORM_NORMAL      False   \n",
+       "4       NaN     Covid-19  NOTICIA           NaN  MULTIMEDIA_NORMAL      False   \n",
        "\n",
-       "              tipoLayout  isOpinion  ...  isClubeP  isItemOpinion  \\\n",
-       "index                                ...                            \n",
-       "0      MULTIMEDIA_NORMAL      False  ...     False          False   \n",
-       "1      MULTIMEDIA_NORMAL      False  ...     False          False   \n",
-       "2      MULTIMEDIA_NORMAL      False  ...     False          False   \n",
-       "3        LONGFORM_NORMAL      False  ...     False          False   \n",
-       "4      MULTIMEDIA_NORMAL      False  ...     False          False   \n",
+       "   ...  isClubeP  isItemOpinion  isMultipleRubric  \\\n",
+       "0  ...     False          False             False   \n",
+       "1  ...     False          False             False   \n",
+       "2  ...     False          False             False   \n",
+       "3  ...     False          False             False   \n",
+       "4  ...     False          False             False   \n",
        "\n",
-       "       isMultipleRubric                                        socialTitle  \\\n",
-       "index                                                                        \n",
-       "0                 False  Covid-19. Linha de mil milhões para micro e pe...   \n",
-       "1                 False  Coronavírus. Covid-19: Twitter retira vídeo e ...   \n",
-       "2                 False  Coronavírus. Tecnologia portuguesa elimina o n...   \n",
-       "3                 False  Coronavírus. “Não somos super-homens, somos hu...   \n",
-       "4                 False  Covid-19. Dez milhões de euros para as institu...   \n",
+       "                                         socialTitle isLongForm isHeadline  \\\n",
+       "0  Covid-19. Linha de mil milhões para micro e pe...      False      False   \n",
+       "1  Coronavírus. Covid-19: Twitter retira vídeo e ...      False      False   \n",
+       "2  Coronavírus. Tecnologia portuguesa elimina o n...      False      False   \n",
+       "3  Coronavírus. “Não somos super-homens, somos hu...       True      False   \n",
+       "4  Covid-19. Dez milhões de euros para as institu...      False      False   \n",
        "\n",
-       "      isLongForm isHeadline wordCount    extra4 partners props  \n",
-       "index                                                           \n",
-       "0          False      False       349       NaN      NaN   NaN  \n",
-       "1          False      False       358       NaN      NaN   NaN  \n",
-       "2          False      False       740       NaN      NaN   NaN  \n",
-       "3           True      False      2108  NOTIFIED      NaN   NaN  \n",
-       "4          False      False       330       NaN      NaN   NaN  \n",
+       "  wordCount    extra4 partners props  \n",
+       "0       349       NaN      NaN   NaN  \n",
+       "1       358       NaN      NaN   NaN  \n",
+       "2       740       NaN      NaN   NaN  \n",
+       "3      2108  NOTIFIED      NaN   NaN  \n",
+       "4       330       NaN      NaN   NaN  \n",
        "\n",
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -324,13 +293,6 @@
        "      <th>Titulo</th>\n",
        "      <th>Desc</th>\n",
        "      <th>Links</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>index</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -374,32 +336,29 @@
        "</div>"
       ],
       "text/plain": [
-       "             Data                                             Titulo  \\\n",
-       "index                                                                  \n",
-       "0      2020-02-01         Coronavírus. Portugueses ficam 14 dias ...   \n",
-       "1      2020-02-01           Wuhan Coronavírus: afinal, qual o risco?   \n",
-       "2      2020-02-01         Como o coronavírus afeta fabricantes de...   \n",
-       "3      2020-02-01         Centenas são repatriados a partir de Wuhan   \n",
-       "4      2020-02-01              Vídeo mostra a origem do coronavírus?   \n",
+       "         Data                                             Titulo  \\\n",
+       "0  2020-02-01         Coronavírus. Portugueses ficam 14 dias ...   \n",
+       "1  2020-02-01           Wuhan Coronavírus: afinal, qual o risco?   \n",
+       "2  2020-02-01         Como o coronavírus afeta fabricantes de...   \n",
+       "3  2020-02-01         Centenas são repatriados a partir de Wuhan   \n",
+       "4  2020-02-01              Vídeo mostra a origem do coronavírus?   \n",
        "\n",
-       "                                                    Desc  \\\n",
-       "index                                                      \n",
-       "0      Os 18 portugueses vindos de Wuhan já aterraram...   \n",
-       "1      Os coronavírus é uma família de vírus com prov...   \n",
-       "2      Com mais habitantes do que Portugal, Wuhan é u...   \n",
-       "3      Vários países já estão a repatriar os seus cid...   \n",
-       "4      Vídeo que alegadamente mostra um mercado na Ch...   \n",
+       "                                                Desc  \\\n",
+       "0  Os 18 portugueses vindos de Wuhan já aterraram...   \n",
+       "1  Os coronavírus é uma família de vírus com prov...   \n",
+       "2  Com mais habitantes do que Portugal, Wuhan é u...   \n",
+       "3  Vários países já estão a repatriar os seus cid...   \n",
+       "4  Vídeo que alegadamente mostra um mercado na Ch...   \n",
        "\n",
-       "                                                   Links  \n",
-       "index                                                     \n",
-       "0      https://observador.pt/2020/02/01/aviao-que-vai...  \n",
-       "1      https://observador.pt/opiniao/2019-ncov-ou-wuh...  \n",
-       "2      https://observador.pt/2020/01/31/como-o-corona...  \n",
-       "3      https://observador.pt/programas/atualidade/cen...  \n",
-       "4      https://observador.pt/factchecks/fact-check-vi...  "
+       "                                               Links  \n",
+       "0  https://observador.pt/2020/02/01/aviao-que-vai...  \n",
+       "1  https://observador.pt/opiniao/2019-ncov-ou-wuh...  \n",
+       "2  https://observador.pt/2020/01/31/como-o-corona...  \n",
+       "3  https://observador.pt/programas/atualidade/cen...  \n",
+       "4  https://observador.pt/factchecks/fact-check-vi...  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +377,7 @@
      "output_type": "stream",
      "text": [
       "Público:     (9670, 42)\n",
-      "Observador:  (12543, 4)\n"
+      "Observador:  (28735, 4)\n"
      ]
     }
    ],
