Added final model and the final csv containing tweets, en translation, classification and score

--- a/notebooks/Final Model - Classification.ipynb
+++ b/notebooks/Final Model - Classification.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final model - preprocessing and classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,7 +27,14 @@
     "pd.set_option('display.width', None)\n",
     "pd.set_option('display.max_colwidth', None)\n",
     "\n",
-    "df = pd.read_csv(\"../notebooks/tweets_clean.csv\")"
+    "df = pd.read_csv(\"../notebooks/tweets_clean_en.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing"
    ]
   },
   {
@@ -369,12 +383,304 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6b339a94d42a4b61bc62911a5c026003",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=629.0, style=ProgressStyle(description_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fdfcf5d758364691964828800c67f789",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=231508.0, style=ProgressStyle(descripti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "262b5578374f41f4ba668597034aad50",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=230.0, style=ProgressStyle(description_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c711e94f5574c35ac37245c4ced0b39",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=267949840.0, style=ProgressStyle(descri…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "All model checkpoint weights were used when initializing TFDistilBertForSequenceClassification.\n",
+      "\n",
+      "All the weights of TFDistilBertForSequenceClassification were initialized from the model checkpoint at distilbert-base-uncased-finetuned-sst-2-english.\n",
+      "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFDistilBertForSequenceClassification for predictions without further training.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Allocate a pipeline for sentiment-analysis\n",
+    "nlp = pipeline('sentiment-analysis')\n",
+    "\n",
+    "def getSentiment(sentence):\n",
+    "  sentiment = nlp(sentence)[0]['label']\n",
+    "  return sentiment\n",
+    "\n",
+    "def getScore(sentence):\n",
+    "  score = nlp(sentence)[0]['score']\n",
+    "  return score\n",
+    "\n",
+    "df['classification'] = df['text_en'].apply(getSentiment)\n",
+    "df['score'] = df['text_en'].apply(getScore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>username</th>\n",
+       "      <th>text</th>\n",
+       "      <th>hashtag</th>\n",
+       "      <th>geo</th>\n",
+       "      <th>text_clean</th>\n",
+       "      <th>text_en</th>\n",
+       "      <th>classification</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1213243065336582144</td>\n",
+       "      <td>2020-01-03 23:37:42+00:00</td>\n",
+       "      <td>adreciclarte</td>\n",
+       "      <td>Olha que o Corona também está a ficar bonzinho. Se o deixarem jogar no seu lugar.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Olha que o Corona também está a ficar bonzinho . Se o deixarem jogar no seu lugar .</td>\n",
+       "      <td>Look, Corona is also looking good. If they let you play in your place.</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>0.999872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1213599942444539906</td>\n",
+       "      <td>2020-01-04 23:15:48+00:00</td>\n",
+       "      <td>food_i_do</td>\n",
+       "      <td>Que escândalo! Parece que só agora é que o árbitro não foi ver as imagens. O golo do Porto que elimina o Santa clara é precedido de falta gritante do corona, nao assinalada, e o VAR nada, dolce fare niente. Mas só hoje é que o VAR FALHOU, não foi? Venha daí a BERRARIA.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Que escândalo ! Parece que só agora é que o árbitro não foi ver as imagens . O golo do Porto que elimina o Santa clara é precedido de falta gritante do corona , nao assinalada , e o VAR nada , dolce fare niente . Mas só hoje é que o VAR FALHOU , não foi ? Venha daí a BERRARIA .</td>\n",
+       "      <td>What a scandal! It seems that it is only now that the referee has not gone to see the images. The Porto goal that eliminates Santa clara is preceded by a glaring corona foul, unmarked, and VAR nothing, dolce fare niente. But only today did VAR FAIL, wasn't it? Come from there to BERRARIA.</td>\n",
+       "      <td>NEGATIVE</td>\n",
+       "      <td>0.996998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1213939014488788992</td>\n",
+       "      <td>2020-01-05 21:43:09+00:00</td>\n",
+       "      <td>CRbeiro</td>\n",
+       "      <td>Corona meu mexicanozinho tu és do caralho pa!! Te quiero</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Corona meu mexicanozinho tu és do caralho pa ! ! Te quiero</td>\n",
+       "      <td>Corona my little mexican you are fucking awesome! ! I want</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>0.999818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1213891469771247621</td>\n",
+       "      <td>2020-01-05 18:34:14+00:00</td>\n",
+       "      <td>dudzs16</td>\n",
+       "      <td>Não temos a jogar um caralho. A substituição do Pepe foi uma desgraça para nós. Odeio o Marcano. O Bruno Fernandes é um porco. Corona parte tantos rins que o querem partir a ele.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Não temos a jogar um caralho . A substituição do Pepe foi uma desgraça para nós . Odeio o Marcano . O Bruno Fernandes é um porco . Corona parte tantos rins que o querem partir a ele .</td>\n",
+       "      <td>We don't have to play a fuck. Pepe's replacement was a disgrace for us. I hate Marcano. Bruno Fernandes is a pig. Corona breaks so many kidneys that they want to leave him.</td>\n",
+       "      <td>NEGATIVE</td>\n",
+       "      <td>0.998038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1213890252374466562</td>\n",
+       "      <td>2020-01-05 18:29:23+00:00</td>\n",
+       "      <td>luisgomes__10</td>\n",
+       "      <td>Digo e volto a dizer, o Corona não pode jogar a lateral</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Digo e volto a dizer , o Corona não pode jogar a lateral</td>\n",
+       "      <td>I say and say again, Corona cannot play the side</td>\n",
+       "      <td>NEGATIVE</td>\n",
+       "      <td>0.997583</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                   id                       date       username  \\\n",
+       "0           0  1213243065336582144  2020-01-03 23:37:42+00:00   adreciclarte   \n",
+       "1           1  1213599942444539906  2020-01-04 23:15:48+00:00      food_i_do   \n",
+       "2           2  1213939014488788992  2020-01-05 21:43:09+00:00        CRbeiro   \n",
+       "3           3  1213891469771247621  2020-01-05 18:34:14+00:00        dudzs16   \n",
+       "4           4  1213890252374466562  2020-01-05 18:29:23+00:00  luisgomes__10   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                            text  \\\n",
+       "0                                                                                                                                                                                              Olha que o Corona também está a ficar bonzinho. Se o deixarem jogar no seu lugar.   \n",
+       "1  Que escândalo! Parece que só agora é que o árbitro não foi ver as imagens. O golo do Porto que elimina o Santa clara é precedido de falta gritante do corona, nao assinalada, e o VAR nada, dolce fare niente. Mas só hoje é que o VAR FALHOU, não foi? Venha daí a BERRARIA.   \n",
+       "2                                                                                                                                                                                                                      Corona meu mexicanozinho tu és do caralho pa!! Te quiero    \n",
+       "3                                                                                             Não temos a jogar um caralho. A substituição do Pepe foi uma desgraça para nós. Odeio o Marcano. O Bruno Fernandes é um porco. Corona parte tantos rins que o querem partir a ele.   \n",
+       "4                                                                                                                                                                                                                        Digo e volto a dizer, o Corona não pode jogar a lateral   \n",
+       "\n",
+       "  hashtag  geo  \\\n",
+       "0     NaN  NaN   \n",
+       "1     NaN  NaN   \n",
+       "2     NaN  NaN   \n",
+       "3     NaN  NaN   \n",
+       "4     NaN  NaN   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                               text_clean  \\\n",
+       "0                                                                                                                                                                                                     Olha que o Corona também está a ficar bonzinho . Se o deixarem jogar no seu lugar .   \n",
+       "1  Que escândalo ! Parece que só agora é que o árbitro não foi ver as imagens . O golo do Porto que elimina o Santa clara é precedido de falta gritante do corona , nao assinalada , e o VAR nada , dolce fare niente . Mas só hoje é que o VAR FALHOU , não foi ? Venha daí a BERRARIA .   \n",
+       "2                                                                                                                                                                                                                              Corona meu mexicanozinho tu és do caralho pa ! ! Te quiero   \n",
+       "3                                                                                                 Não temos a jogar um caralho . A substituição do Pepe foi uma desgraça para nós . Odeio o Marcano . O Bruno Fernandes é um porco . Corona parte tantos rins que o querem partir a ele .   \n",
+       "4                                                                                                                                                                                                                                Digo e volto a dizer , o Corona não pode jogar a lateral   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                                             text_en  \\\n",
+       "0                                                                                                                                                                                                                             Look, Corona is also looking good. If they let you play in your place.   \n",
+       "1  What a scandal! It seems that it is only now that the referee has not gone to see the images. The Porto goal that eliminates Santa clara is preceded by a glaring corona foul, unmarked, and VAR nothing, dolce fare niente. But only today did VAR FAIL, wasn't it? Come from there to BERRARIA.   \n",
+       "2                                                                                                                                                                                                                                         Corona my little mexican you are fucking awesome! ! I want   \n",
+       "3                                                                                                                       We don't have to play a fuck. Pepe's replacement was a disgrace for us. I hate Marcano. Bruno Fernandes is a pig. Corona breaks so many kidneys that they want to leave him.   \n",
+       "4                                                                                                                                                                                                                                                   I say and say again, Corona cannot play the side   \n",
+       "\n",
+       "  classification     score  \n",
+       "0       POSITIVE  0.999872  \n",
+       "1       NEGATIVE  0.996998  \n",
+       "2       POSITIVE  0.999818  \n",
+       "3       NEGATIVE  0.998038  \n",
+       "4       NEGATIVE  0.997583  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('tweets_clean_en.csv')"
+    "df.to_csv('tweets_en_classification.csv')"
    ]
   }
  ],
