--- a/notebooks/Final Model - Scraping.ipynb
+++ b/notebooks/Final Model - Scraping.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Model - scraping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook implements the daily extraction of tweets (up to 1000) done in Portugal and in Portuguese that mention the words present in `tags` given a certain period of time `[first_date, end_date]`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
