--- a/notebooks/news and tweets combined - analysis.ipynb
+++ b/notebooks/news and tweets combined - analysis.ipynb
@@ -15,6 +15,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introdução\n",
+    "\n",
+    "2020 será certamente recordado como o ano que veio separar o \"antes\" e o \"depois\" na forma como a maioria das sociedades opera e no quotidiano de milhões de pessoas.\n",
+    "A chegada e permanência da pandemia Corona Virús a Portugal veio alterar a forma como vivemos. Foi um ano em que o governo teve que assumir medidas restritivas e contestáveis, em que palavras como quarentena e confinamento se tornaram parte do quotidiano e nos habituámos a usar máscaras.\n",
+    "Esta análise, realizada no âmbito da organização Data Science for Social Good Portugal, pretende a analisar de que forma os portugueses reagiram tanto às medidas implementadas pelo Governo como às notícias publicadas durante o período de Janeiro a Julho.\n",
+    "\n",
+    "Os dados relativos às reacções dos Portugueses têm por base os tweets publicados durante o período da análise e onde tenha havido uma mencão ao vírus no texto ou no hashtag da publicação\n",
+    "\n",
+    "As notícias foram retiradas dos websites do Público e Observador e as medidads governamentais do XXX. \n",
+    "\n",
+    "Tanto as publicações no Twitter como os títulos e descrições das notícias foram submetidas a uma análise de sentimento  uma técnica de Machine Learning. Para mais informação sobre os aspectos técnicos desta análise, clique aqui.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -1200,10 +1217,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data</th>\n",
+       "      <th>local</th>\n",
+       "      <th>tipo</th>\n",
+       "      <th>descrição</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-03-13</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>Alerta</td>\n",
+       "      <td>Decretado o Estado de Alerta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2020-03-18</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>Emergência</td>\n",
+       "      <td>Decretado o estado de emergência em Portugal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2020-04-03</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>Emergência</td>\n",
+       "      <td>Prorrogação do Estado de Emergência</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>2020-04-17</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>Emergência</td>\n",
+       "      <td>Prorrogação do Estado de Emergência</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>2020-05-03</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>Calamidade</td>\n",
+       "      <td>Decretado Estado de Calamidade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>2020-05-15</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>Calamidade</td>\n",
+       "      <td>Prorrogação do estado de Calamidade</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>2020-06-09</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>Calamidade</td>\n",
+       "      <td>Prorrogação da Situação de Calamidade até 28-0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>2020-07-01</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>Alerta</td>\n",
+       "      <td>Decretada situação de Alerta em todo o país ex...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          data     local        tipo  \\\n",
+       "5   2020-03-13  Portugal      Alerta   \n",
+       "21  2020-03-18  Portugal  Emergência   \n",
+       "37  2020-04-03  Portugal  Emergência   \n",
+       "47  2020-04-17  Portugal  Emergência   \n",
+       "50  2020-05-03  Portugal  Calamidade   \n",
+       "73  2020-05-15  Portugal  Calamidade   \n",
+       "96  2020-06-09  Portugal  Calamidade   \n",
+       "107 2020-07-01  Portugal      Alerta   \n",
+       "\n",
+       "                                             descrição  \n",
+       "5                         Decretado o Estado de Alerta  \n",
+       "21        Decretado o estado de emergência em Portugal  \n",
+       "37                 Prorrogação do Estado de Emergência  \n",
+       "47                 Prorrogação do Estado de Emergência  \n",
+       "50                      Decretado Estado de Calamidade  \n",
+       "73                 Prorrogação do estado de Calamidade  \n",
+       "96   Prorrogação da Situação de Calamidade até 28-0...  \n",
+       "107  Decretada situação de Alerta em todo o país ex...  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_medidas"
+   ]
   }
  ],
  "metadata": {
